[gd_scene load_steps=5 format=3 uid="uid://dax8ukhexcxl1"]

[ext_resource type="Script" uid="uid://brj34k1btat1c" path="res://scenes/UI/pause_menu.gd" id="1_qo2fb"]
[ext_resource type="AudioStream" uid="uid://vcn1lqnkjqw1" path="res://assets/audio/audio_made_sfx/menuopen1.wav" id="2_mko1u"]
[ext_resource type="AudioStream" uid="uid://dhdmusl4cjtvx" path="res://assets/audio/audio_made_sfx/menuclose1.wav" id="3_feath"]
[ext_resource type="FontFile" uid="uid://cgjxxygb2v5k1" path="res://assets/font_free/Times New Roman MT Condensed Regular.otf" id="3_mko1u"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qo2fb")

[node name="SFXtester" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_mko1u")
bus = &"SFX"

[node name="SFXtester2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_feath")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color(0.658131, 0.771447, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -362.5
offset_right = 800.0
offset_bottom = 362.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Resume" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 2
offset_left = 1472.0
offset_top = 5.0
offset_right = 1592.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 75
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.138
anchor_right = 0.937
anchor_bottom = 0.862
offset_left = 0.511997
offset_top = -0.0320053
offset_right = 0.511963
offset_bottom = 0.0319824
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_mko1u")
theme_override_font_sizes/normal_font_size = 40
text = "Use P to Pause;
Use WASD (or Arrow keys) to move, with Shift to run; 
Use N for dialogue actions;
Use SPACE if at Mural"
fit_content = true

[node name="Label_Spacefill2" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_alignment = 2

[node name="Label_SFX" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_mko1u")
theme_override_font_sizes/font_size = 40
text = "SFX Level"
vertical_alignment = 2

[node name="HSlider_SFX" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="Label_Music" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_mko1u")
theme_override_font_sizes/font_size = 40
text = "Volume Level"
vertical_alignment = 2

[node name="HSlider_Music" type="HSlider" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="Label_Spacefill" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_alignment = 2

[node name="Button_Quit" type="Button" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mko1u")
theme_override_font_sizes/font_size = 40
text = "Quit Game"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel"]
show_behind_parent = true
layout_mode = 2
offset_right = 1600.0
offset_bottom = 725.0
mouse_filter = 2
color = Color(0.454524, 0.454524, 0.454524, 1)

[connection signal="pressed" from="CanvasLayer/Panel/Button_Resume" to="." method="_on_button_resume_pressed"]
[connection signal="drag_ended" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HSlider_SFX" to="." method="_on_h_slider_sfx_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HSlider_Music" to="." method="_on_h_slider_music_drag_ended"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
